fixed bad source links and navbar spacing

--- a/app/assets/stylesheets/grenander/main.css
+++ b/app/assets/stylesheets/grenander/main.css
@@ -79,3 +79,14 @@ li.nav-item a:hover {
 .page-sidebar .card {
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
+
+/* pagination */
+
+.pagination .page-item a {
+	color: #46166B; 
+}
+
+.pagination .page-item.active .page-link {
+	background-color: #9e68c7;
+	border-color: #9e68c7;
+}
